WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
75894
[Qt] Don't expose m_windowOptions as part of the public interface in MiniBrowserApplication
https://bugs.webkit.org/show_bug.cgi?id=75894
Summary
[Qt] Don't expose m_windowOptions as part of the public interface in MiniBrow...
Alexander Færøy
Reported
2012-01-09 15:26:02 PST
SSIA.
Attachments
Patch
(2.57 KB, patch)
2012-01-10 03:51 PST
,
Alexander Færøy
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexander Færøy
Comment 1
2012-01-10 03:51:20 PST
Created
attachment 121824
[details]
Patch
Alexander Færøy
Comment 2
2012-01-10 04:05:07 PST
Comment on
attachment 121824
[details]
Patch Gah, I need to start remembering asking for CQ...
WebKit Review Bot
Comment 3
2012-01-10 05:25:13 PST
Comment on
attachment 121824
[details]
Patch Clearing flags on attachment: 121824 Committed
r104556
: <
http://trac.webkit.org/changeset/104556
>
WebKit Review Bot
Comment 4
2012-01-10 05:25:17 PST
All reviewed patches have been landed. Closing bug.
Csaba Osztrogonác
Comment 5
2012-01-10 05:34:12 PST
Hey, you guys broke the build: cc1plus: warnings being treated as errors /ramdisk/qt-linux-32-release-webkit2/build/Tools/MiniBrowser/qt/MiniBrowserApplication.h: In constructor ‘MiniBrowserApplication::MiniBrowserApplication(int&, char**)’: /ramdisk/qt-linux-32-release-webkit2/build/Tools/MiniBrowser/qt/MiniBrowserApplication.h:120: error: ‘MiniBrowserApplication::m_windowOptions’ will be initialized after /ramdisk/qt-linux-32-release-webkit2/build/Tools/MiniBrowser/qt/MiniBrowserApplication.h:110: error: ‘bool MiniBrowserApplication::m_realTouchEventReceived’ /ramdisk/qt-linux-32-release-webkit2/build/Tools/MiniBrowser/qt/MiniBrowserApplication.cpp:64: error: when initialized here
Csaba Osztrogonác
Comment 6
2012-01-10 06:41:27 PST
Fixed in
http://trac.webkit.org/changeset/104559
. Thx.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug