[Qt] Don't expose m_windowOptions as part of the public interface in MiniBrowserApplication https://bugs.webkit.org/show_bug.cgi?id=75894

Patch by Alexander Færøy <alexander.faeroy@nokia.com> on 2012-01-10
Reviewed by Tor Arne Vestbø.

* MiniBrowser/qt/MiniBrowserApplication.h:
(MiniBrowserApplication::windowOptions):
* MiniBrowser/qt/main.cpp:
(main):

Canonical link: https://commits.webkit.org/92736@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104556 268f45cc-cd09-0410-ab3c-d52691b4dbfc